:stars: Update BWP pages and add footer

--- a/bwp.html
+++ b/bwp.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  
+
   <title>Badan Wakil Pelajar</title>
 
   <link rel="icon" href="img/mrsmlogo.png">
@@ -53,6 +53,7 @@
             <li><a class="is-active">Badan Wakil Pelajar</a>
               <ul>
                 <li><a href="bwp/bwp2021.html">BWP 20/21</a></li>
+                <li><a href="./bwp/bwp2122.html">BWP 21/22</a></li>
               </ul>
             </li>
             <li><a href="prs.html">Pembimbing Rakan Sebaya</a></li>
@@ -99,11 +100,23 @@
 
         </div>
 
+
       </div>
 
     </div>
 
   </div>
+
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Website BKP MRSM Gemencheh</strong> by <a href="https://github.com/MagusWyvern">Adi Ahmad Danish</a>.
+        The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+      </p>
+    </div>
+  </footer>
 
   <div class="clearfix"></div>
 
