--- a/bwp/bwp2021.html
+++ b/bwp/bwp2021.html
@@ -102,7 +102,7 @@
 
           </div>
 
-          <h4>Manifesto BWP 20/21</h4>
+          <h4>Nama & Manifesto BWP 20/21</h4>
 
           <table class="table is-hoverable">
             <thead>
@@ -332,6 +332,16 @@
 
   <div class="clearfix"></div>
 
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Website BKP MRSM Gemencheh</strong> by <a href="https://github.com/MagusWyvern">Adi Ahmad Danish</a>.
+        The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+      </p>
+    </div>
+  </footer>
 
 </body>
 
