--- a/bwp/bwp2122.html
+++ b/bwp/bwp2122.html
@@ -123,7 +123,7 @@
 
                     </div>
 
-                    <h4>Manifesto BWP 20/21</h4>
+                    <h4>Nama & Manifesto BWP 21/22</h4>
 
                     <table class="table is-hoverable">
                         <thead>
@@ -137,73 +137,73 @@
 
 
                             <tr>
-                                <td>Muaz Hafiz</td>
-                                <td>We Are Family</td>
+                                <td>Azrai Ezaidi</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Hasya Amalin</td>
-                                <td>Talent in Search</td>
+                                <td>Zaim Aqmal</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Luqman Rasidi</td>
-                                <td>Additional Whiteboard<br>Anti Slippering</td>
+                                <td>Muhammad Faris Fannani</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Syadiyah Nur Hanani</td>
-                                <td>Pahala Untuk Semua</td>
+                                <td>Adam Haziq</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Farish Emile</td>
-                                <td>Sunnah Day<br>Calendar Hijrah</td>
+                                <td>Ridhauddin</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Wardina Omar</td>
-                                <td>Leisure Study</td>
+                                <td>Umar Zurrayyan</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Nik Alzamdeen</td>
-                                <td>Kempen Membina Generasi Hadapan<br>Sudut Bacaan</td>
+                                <td>Muhammad Arib Mazhud</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Auni Syifa'</td>
-                                <td>Make It Right</td>
+                                <td>Nurul Syamimi</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Saiful Imran</td>
-                                <td>Water Jet<br>Penyediaan Baldi di Tandas Surau</td>
+                                <td>Hafsah Shofi</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Nadia Afrina</td>
-                                <td>Storytime<br>Saturday Gifts</td>
+                                <td>Hasya Sofeeya</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Arief Fahim</td>
-                                <td>Tayangan Lepas Peperiksaan<br>Board Pertandingan</td>
+                                <td>Khadijah Mawaddah</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Imaniyyah Fahim</td>
-                                <td>Make It Easy</td>
+                                <td>Nabilah binti Yusri</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Zaid Harithah</td>
-                                <td>Tower Of Hanoi<br>See Hear Act</td>
+                                <td>Nur Azreen Farhana</td>
+                                <td>""</td>
                             </tr>
 
                             <tr>
-                                <td>Puteri Nur Aleeya</td>
-                                <td>Hall's Cuckoo<br>BA's Toilet Issue</td>
+                                <td>Tasnim binti Iskandar</td>
+                                <td>""</td>
                             </tr>
 
                         </tbody>
@@ -212,7 +212,7 @@
 
                     </table>
 
-                    <h4>Aktiviti</h4>
+                    <!-- <h4>Aktiviti</h4>
 
                     <div class="box">
 
@@ -335,7 +335,7 @@
                                 </figure>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
 
 
 
@@ -352,6 +352,17 @@
     </div>
 
     <div class="clearfix"></div>
+
+    <footer class="footer">
+        <div class="content has-text-centered">
+          <p>
+            <strong>Website BKP MRSM Gemencheh</strong> by <a href="https://github.com/MagusWyvern">Adi Ahmad Danish</a>.
+            The source code is licensed
+            <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+            is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+          </p>
+        </div>
+      </footer>
 
 
 </body>
