--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       <nav class="navbar">
         <div class="container">
           <div class="navbar-brand">
-            <a class="navbar-item">
-              <img src="" alt="">
+            <a href="./index.html" class="navbar-item">
+              <img src="img/mrsmlogo.png" alt="">
             </a>
             <span class="navbar-burger" data-target="navbarMenuHeroA">
               <span></span>
@@ -66,14 +66,6 @@
               <!-- <a class="navbar-item">
                 Documentation
               </a> -->
-              <span id="add-button" class="navbar-item">
-                <a class="button is-primary is-inverted">
-                  <span class="icon">
-                    <i class="fab fa-github"></i>
-                  </span>
-                  <span>Download</span>
-                </a>
-              </span>
             </div>
           </div>
         </div>
@@ -89,6 +81,14 @@
         <p class="subtitle">
           "Dipimpin untuk memimpin"
         </p>
+        <span id="add-button" class="">
+          <a class="button is-primary is-inverted">
+            <span class="icon">
+              <i class="fab fa-github"></i>
+            </span>
+            <span>Download</span>
+          </a>
+        </span>
       </div>
     </div>
 
@@ -107,8 +107,11 @@
         </div>
       </nav>
     </div>
+    
   </section>
 
+
+  
   <div class="section">
 
     <div class="content">
@@ -218,6 +221,17 @@
     </div>
 
   </div>
+
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+        <strong>Website BKP MRSM Gemencheh</strong> by <a href="https://github.com/MagusWyvern">Adi Ahmad Danish</a>.
+        The source code is licensed
+        <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+        is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+      </p>
+    </div>
+  </footer>
 </body>
 
 </html>
