:stars: Updated EMC pages

--- a/emc.html
+++ b/emc.html
@@ -1,24 +1,27 @@
 <html>
 
 <head>
+
   <title>English Motivational Committee</title>
+
   <link rel="icon" href="img/mrsmlogo.png">
+
   <meta charset="utf-8" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <link rel="stylesheet" href="css/bulma-rtl.css" />
-  <link rel="stylesheet" href="css/bulma-rtl.css.map" />
-  <link rel="stylesheet" href="css/bulma-rtl.min.css" />
-  <link rel="stylesheet" href="css/bulma.css" />
-  <link rel="stylesheet" href="css/bulma.css.map" />
-  <link rel="stylesheet" href="css/bulma.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
+  integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q=="
+  crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
+
   <div class="section">
 
     <div class="columns">
@@ -39,7 +42,7 @@
             <li><a href="prs.html">Pembimbing Rakan Sebaya</a></li>
             <li><a class="is-active">English Motivational Committee</a>
               <ul>
-                <li><a href="">EMC 20/21</a></li>
+                <li><a href="./emc/emc2021.html">EMC 20/21</a></li>
               </ul>
             </li>
             <li><a href="alk.html">Ahli Lembaga Koperasi</a></li>
@@ -53,7 +56,8 @@
       </div>
       <div class="column auto">
         <div class="content">
-          <h1>English Motivational Committee</h1>
+          <h1>English Motivational Committee <a target="_blank"
+            href="https://www.instagram.com/emc.gmc/" class="fab fa-instagram"></a></h1>
           <div class="block">
             <i>"What is bravery, without a dash of recklessness?"</i>
           </div>
