:stars: Updated BWP Pages (Heroes)

--- a/bwp/bwp2021.html
+++ b/bwp/bwp2021.html
@@ -74,12 +74,33 @@
 
         <div class="content">
 
-          <h1>Badap Wakil Pelajar 20/21<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
-              class="fa fa-instagram"></a></h1>
+          <section class="hero is-info is-small">
+            <div class="hero-body">
+              <h1>Badap Wakil Pelajar 20/21<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
+                  class="fa fa-instagram"></a></h1>
+
+              <i>"Dipimpin untuk memimpin"</i>
+            </div>
+
+            <div class="hero-foot">
+              <nav class="tabs">
+                <div class="container">
+                  <ul>
+                    <li class="is-active"><a>Overview</a></li>
+                    <li><a href="">Carta Organisasi BWP 20/21</a></li>
+                    <li><a>Gambar BWP 20/21</a></li>
+                    <li><a href="">Video BWP 20/21</a></li>
+                  </ul>
+                </div>
+              </nav>
+            </div>
+          </section>
+
+
 
           <div class="block">
 
-            <i>"Dipimpin untuk memimpin"</i>
+
 
           </div>
 
@@ -191,11 +212,12 @@
 
           </table>
 
-          <h4>Aktiviti</h4>
+          <h4>Aktiviti aktiviti BWP 20/21</h4>
 
           <div class="box">
 
-            <p>Berikut merupakan beberapa aktiviti yang telah dijalankan BWP 20/21</p>
+            <p>Berikut merupakan beberapa aktiviti yang telah dijalankan BWP 20/21. Klik <a>sini</a> untuk layari arkib
+              aktiviti aktiviti yang telah dijalankan oleh mereka.</p>
             <div class="columns">
 
               <div class="column">
