--- a/index.html
+++ b/index.html
@@ -214,8 +214,7 @@
           <button class="delete" aria-label="delete"></button>
         </div>
         <div class="message-body">
-          Anda sedang melayari laman web yang masih dalam pembinaan, jika ada sebarang masalah, anda dipersilakan
-          untuk memberikan sebarang cadangan di <a target="_top" href="mailto:maguswyvern@gmail.com">sini</a>
+         Spot a typo? Want to add something? Put up an issue <a href="https://github.com/MRSM-Gemencheh/MRSM-Gemencheh.github.io/issues">here</a> to let the dev team know!
         </div>
       </article>
     </div>
