--- a/bwp/bwp2122.html
+++ b/bwp/bwp2122.html
@@ -74,12 +74,31 @@
 
                 <div class="content">
 
-                    <h1>Badap Wakil Pelajar 21/22<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
-                            class="fa fa-instagram"></a></h1>
+                    <section class="hero is-info is-small">
+                        <div class="hero-body">
+
+                            <h1>Badap Wakil Pelajar 21/22<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
+                                    class="fa fa-instagram"></a></h1>
+                                    <i>"Dipimpin untuk memimpin"</i>
+                        </div>
+
+                        <div class="hero-foot">
+                            <nav class="tabs">
+                                <div class="container">
+                                  <ul>
+                                    <li class="is-active"><a>Overview</a></li>
+                                    <li><a href="">Carta Organisasi BWP 21/22</a></li>
+                                    <li><a>Gambar BWP 21/22</a></li>
+                                    <li><a href="">Video BWP 21/22</a></li>
+                                  </ul>
+                                </div>
+                              </nav>
+                        </div>
+                    </section>
+
 
                     <div class="block">
 
-                        <i>"Dipimpin untuk memimpin"</i>
 
                     </div>
 
