:stars: Updated BWP Pages

--- a/bwp/bwp2021.html
+++ b/bwp/bwp2021.html
@@ -76,7 +76,7 @@
 
           <section class="hero is-info is-small">
             <div class="hero-body">
-              <h1>Badap Wakil Pelajar 20/21<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
+              <h1>Badan Wakil Pelajar 20/21<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
                   class="fa fa-instagram"></a></h1>
 
               <i>"Dipimpin untuk memimpin"</i>
@@ -87,9 +87,9 @@
                 <div class="container">
                   <ul>
                     <li class="is-active"><a>Overview</a></li>
-                    <li><a href="">Carta Organisasi BWP 20/21</a></li>
-                    <li><a>Gambar BWP 20/21</a></li>
-                    <li><a href="">Video BWP 20/21</a></li>
+                    <li><a href="cartaorganisasi2021.html">Carta Organisasi BWP 20/21</a></li>
+                    <li><a>Arkib Gambar BWP 20/21</a></li>
+                    <li><a href="">Arkib Video BWP 20/21</a></li>
                   </ul>
                 </div>
               </nav>
@@ -216,7 +216,7 @@
 
           <div class="box">
 
-            <p>Berikut merupakan beberapa aktiviti yang telah dijalankan BWP 20/21. Klik <a>sini</a> untuk layari arkib
+            <p>Berikut merupakan <b>beberapa</b> aktiviti yang telah dijalankan BWP 20/21. Klik <a>sini</a> untuk layari arkib penuh
               aktiviti aktiviti yang telah dijalankan oleh mereka.</p>
             <div class="columns">
 
