:stars: Added Image Pages for BWP 20/21

--- a/bwp/cartaorganisasi2021.html
+++ b/bwp/cartaorganisasi2021.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <title>BWP 20/21</title>
+    <title>Carta Organisasi BWP 20/21</title>
 
     <link rel="icon" href="../img/mrsmlogo.png">
 
@@ -76,7 +76,7 @@
 
                     <section class="hero is-info is-small">
                         <div class="hero-body">
-                            <h1>Badan Wakil Pelajar 20/21<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
+                            <h1>Carta Organisasi BWP 20/21<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
                                     class="fa fa-instagram"></a></h1>
 
                             <i>"Dipimpin untuk memimpin"</i>
@@ -88,8 +88,8 @@
                                     <ul>
                                         <li><a href="./bwp2021.html">Overview</a></li>
                                         <li class="is-active"><a>Carta Organisasi BWP 20/21</a></li>
-                                        <li><a>Gambar BWP 20/21</a></li>
-                                        <li><a href="">Video BWP 20/21</a></li>
+                                        <li><a href="./gambar2021.html">Arkib Gambar BWP 20/21</a></li>
+                                        <li><a href="">Arkib Video BWP 20/21</a></li>
                                     </ul>
                                 </div>
                             </nav>
