--- a/bwp/bwp2021.html
+++ b/bwp/bwp2021.html
@@ -87,8 +87,8 @@
                 <div class="container">
                   <ul>
                     <li class="is-active"><a>Overview</a></li>
-                    <li><a href="cartaorganisasi2021.html">Carta Organisasi BWP 20/21</a></li>
-                    <li><a>Arkib Gambar BWP 20/21</a></li>
+                    <li><a href="./cartaorganisasi2021.html">Carta Organisasi BWP 20/21</a></li>
+                    <li><a href="./gambar2021.html">Arkib Gambar BWP 20/21</a></li>
                     <li><a href="">Arkib Video BWP 20/21</a></li>
                   </ul>
                 </div>
@@ -123,7 +123,7 @@
 
           </div>
 
-          <h4>Nama & Manifesto BWP 20/21</h4>
+          <h4>Nama nama & Manifesto BWP 20/21</h4>
 
           <table class="table is-hoverable">
             <thead>
@@ -216,19 +216,20 @@
 
           <div class="box">
 
-            <p>Berikut merupakan <b>beberapa</b> aktiviti yang telah dijalankan BWP 20/21. Klik <a>sini</a> untuk layari arkib penuh
+            <p>Berikut merupakan <b>beberapa</b> aktiviti yang telah dijalankan BWP 20/21. Klik <a>sini</a> untuk layari
+              arkib penuh
               aktiviti aktiviti yang telah dijalankan oleh mereka.</p>
             <div class="columns">
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (1).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (1).jpg" alt="">
                 </figure>
               </div>
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (2).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (2).jpg" alt="">
                 </figure>
               </div>
             </div>
@@ -236,28 +237,13 @@
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (3).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (3).jpg" alt="">
                 </figure>
               </div>
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (4).jpg" alt="">
-                </figure>
-              </div>
-            </div>
-
-            <div class="columns">
-
-              <div class="column">
-                <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (5).jpg" alt="">
-                </figure>
-              </div>
-
-              <div class="column">
-                <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (6).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (4).jpg" alt="">
                 </figure>
               </div>
             </div>
@@ -266,13 +252,13 @@
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (7).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (5).jpg" alt="">
                 </figure>
               </div>
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (8).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (6).jpg" alt="">
                 </figure>
               </div>
             </div>
@@ -281,13 +267,13 @@
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (9).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (7).jpg" alt="">
                 </figure>
               </div>
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (10).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (8).jpg" alt="">
                 </figure>
               </div>
             </div>
@@ -296,13 +282,13 @@
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (11).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (9).jpg" alt="">
                 </figure>
               </div>
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (12).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (10).jpg" alt="">
                 </figure>
               </div>
             </div>
@@ -311,33 +297,18 @@
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (13).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (11).jpg" alt="">
                 </figure>
               </div>
 
               <div class="column">
                 <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (14).jpg" alt="">
+                  <img src="/bwp/20-21/gambar/1 (12).jpg" alt="">
                 </figure>
               </div>
             </div>
 
-            <div class="columns">
-
-              <div class="column">
-                <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (15).jpg" alt="">
-                </figure>
-              </div>
-
-              <div class="column">
-                <figure class="image is-5by4">
-                  <img src="/bwp/20-21/1 (16).jpg" alt="">
-                </figure>
-              </div>
-            </div>
           </div>
-
 
 
         </div>
