:stars: Updated BWP 21/22 Pages!

--- a/bwp/bwp2122.html
+++ b/bwp/bwp2122.html
@@ -77,7 +77,7 @@
                     <section class="hero is-info is-small">
                         <div class="hero-body">
 
-                            <h1>Badap Wakil Pelajar 21/22<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
+                            <h1>Badan Wakil Pelajar 21/22<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
                                     class="fa fa-instagram"></a></h1>
                                     <i>"Dipimpin untuk memimpin"</i>
                         </div>
@@ -87,9 +87,9 @@
                                 <div class="container">
                                   <ul>
                                     <li class="is-active"><a>Overview</a></li>
-                                    <li><a href="">Carta Organisasi BWP 21/22</a></li>
-                                    <li><a>Gambar BWP 21/22</a></li>
-                                    <li><a href="">Video BWP 21/22</a></li>
+                                    <li><a href="./cartaorganisasi2122.html">Carta Organisasi BWP 21/22</a></li>
+                                    <!-- <li><a>Gambar BWP 21/22</a></li>
+                                    <li><a href="">Video BWP 21/22</a></li> -->
                                   </ul>
                                 </div>
                               </nav>
@@ -157,72 +157,72 @@
 
                             <tr>
                                 <td>Azrai Ezaidi</td>
-                                <td>""</td>
+                                <td>Bacaan Yasin<br>Penyangkut di Bilik Air</td>
                             </tr>
 
                             <tr>
                                 <td>Zaim Aqmal</td>
-                                <td>""</td>
+                                <td>Night Sports<br>Fateh's Care (Collaboration)<br>Dean's Award</td>
                             </tr>
 
                             <tr>
                                 <td>Muhammad Faris Fannani</td>
-                                <td>""</td>
+                                <td>"We are Family"<br>Bumbung untuk Walkway Lelaki<br>1 Hari 1 Fiqh</td>
                             </tr>
 
                             <tr>
                                 <td>Adam Haziq</td>
-                                <td>""</td>
+                                <td>Peti Penyimpanan Laptop<br>Fateh's Care (Collaboration)</td>
                             </tr>
 
                             <tr>
-                                <td>Ridhauddin</td>
-                                <td>""</td>
+                                <td>Ridhauddin Sahlan</td>
+                                <td>Your Future Leader<br>Ulul Albab Development</td>
                             </tr>
 
                             <tr>
                                 <td>Umar Zurrayyan</td>
-                                <td>""</td>
+                                <td>Asramaku Syurgaku<br>Foodbank MRSM Gemencheh</td>
                             </tr>
 
                             <tr>
                                 <td>Muhammad Arib Mazhud</td>
-                                <td>""</td>
+                                <td>Penambahbaikan Peralatan Sukan<br>Mewujudkan Program 3R</td>
                             </tr>
 
                             <tr>
                                 <td>Nurul Syamimi</td>
-                                <td>""</td>
+                                <td>Taha as a Day Beginner<br>Mirror, Mirror on the Wall</td>
                             </tr>
 
                             <tr>
                                 <td>Hafsah Shofi</td>
-                                <td>""</td>
+                                <td>Pillars of Ibadah<br>MRSM & Ulul Albab Exchange</td>
                             </tr>
 
                             <tr>
                                 <td>Hasya Sofeeya</td>
-                                <td>""</td>
+                                <td>Free Tools<br>Pertandingan Huffaz Hadith</td>
                             </tr>
 
                             <tr>
                                 <td>Khadijah Mawaddah</td>
-                                <td>""</td>
+                                <td>Pen Pal for Everyone<br>Printers in PSP</td>
                             </tr>
 
                             <tr>
                                 <td>Nabilah binti Yusri</td>
-                                <td>""</td>
+                                <td>Fun Washing Corner<br>Jam di Setiap Tandas</td>
                             </tr>
 
                             <tr>
                                 <td>Nur Azreen Farhana</td>
-                                <td>""</td>
+                                <td>No More use Your Own!<br>Happy Riadah for All!</td>
                             </tr>
 
                             <tr>
                                 <td>Tasnim binti Iskandar</td>
-                                <td>""</td>
+                                <td>Menyediakan Peluang Perniagaan<br>Indoor Exercises & Cardio Workout</td>
                             </tr>
 
                         </tbody>
