:arrow_right: Rebranded to Arkib MRSM GMC

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
 
-  <title>BKP MRSM Gemencheh</title>
+  <title>Arkib MRSM Gemencheh</title>
 
   <meta name="description" content="Laman sesawang Badan Kepimpinan Pelajar MRSM Gemencheh!">
 
@@ -76,7 +76,7 @@
     <div class="hero-body">
       <div class="container has-text-centered">
         <p class="title">
-          Selamat datang ke laman sesawang BKP MRSM Gemencheh!
+          Selamat datang ke Arkib MRSM Gemencheh!
         </p>
         <p class="subtitle">
           "Dipimpin untuk memimpin"
@@ -116,7 +116,7 @@
 
     <div class="content">
 
-      <h1>Badan Kepimpinan Pelajar</h1>
+      <h1>Arkib Badan Kepimpinan Pelajar</h1>
       <p>Peranan Badan Kepimpinan Pelajar adalah untuk memimpin para pelajar untuk mematuhi peraturan yang ditetapkan
         oleh pihak maktab, serta menganjurkan pelbagai aktiviti untuk tujuan peningkatan nilai para pelajar.</p>
       <div class="box">
