--- a/ldp/cartaorganisasi2021.html
+++ b/ldp/cartaorganisasi2021.html
@@ -1,24 +1,206 @@
+<html>
+
+<head>
+
+    <title>Carta Organisasi BWP 20/21</title>
+
+    <link rel="icon" href="../img/mrsmlogo.png">
+
+    <meta charset="utf-8" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"
+        integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="../css/addon.css">
+
+    <style>
+        .fa {
+            padding: 20px;
+            font-size: 30px;
+            width: 30px;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 50%;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="section">
+
+        <div class="columns">
+
+            <div class="column is-one-fifth">
+
+                <aside class="menu">
+
+                    <p class="menu-label">
+
+                        <a href="../index.html">
+                            Back to - BKP
+                        </a>
+
+                    </p>
+
+                    <ul class="menu-list">
+
+                        <li><a href="../bwp.html">Badan Wakil Pelajar</a>
+                            <ul>
+                                <li><a class="is-active">BWP 20/21</a></li>
+                                <li><a href="./bwp2122.html">BWP 21/22</a></li>
+                            </ul>
+                        </li>
+
+                        <li><a href="../prs.html">Pembimbing Rakan Sebaya</a></li>
+
+                        <li><a href="../emc.html">English Motivational Committee</a></li>
+
+                        <li><a href="../alk.html">Ahli Lembaga Koperasi</a></li>
+
+                        <li><a href="../badar.html">Badan Dakwah dan Rohani</a></li>
+
+                        <li><a href="../ldp.html">Lembaga Disiplin Pelajar</a></li>
+
+                    </ul>
+
+            </div>
+
+            <div class="column auto">
+
+                <div class="content">
+
+                    <section class="hero is-info is-small">
+                        <div class="hero-body">
+                            <h1>Carta Organisasi LDP 20/21<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
+                                    class="fa fa-instagram"></a></h1>
+
+                            <i>"Dipimpin untuk memimpin"</i>
+                        </div>
+
+                        <div class="hero-foot">
+                            <nav class="tabs">
+                                <div class="container">
+                                    <ul>
+                                        <li><a href="./ldp2021.html">Overview</a></li>
+                                        <li class="is-active"><a>Carta Organisasi BWP 20/21</a></li>
+                                        <!-- <li><a href="./gambar2021.html">Arkib Gambar BWP 20/21</a></li>
+                                        <li><a href="">Arkib Video BWP 20/21</a></li> -->
+                                    </ul>
+                                </div>
+                            </nav>
+                        </div>
+                    </section>
+
+                    <div class="block"></div>
+
+                    <p class="title is-4">Guru Penasihat</p>
+
+                    <div class="box">
+
+                        ENCIK MOHD FAIZI BIN MAMAT <br><br>
+                        PUAN HANIS BINTI MD SUDI
+
+
+
+                    </div>
+
+                    <div class="block"></div>
+                    <p class="title is-4">Ahli</p>
+
+
+                    <div class="box">
+
+                        <p>
+                        <div class="columns">
+
+                            <div class="column auto">
+
+
+
+                                ✔ AHMAD FIKRY ZAKWAN BIN MOHD SHAMSULIZAM<br><br>
+                                ✔ AZMIL ARIF BIN ZAINUDDIN<br><br>
+                                ✔ FIRMAN FIRDAUS BIN AHMAD ZAIDI<br><br>
+                                ✔ MUHAMMAD DANIAL BIN MOHD EIZARUDDIN<br><br>
+                                ✔ MUHAMMAD IMAN BIN IZHAM<br><br>
+                                ✔ MUHAMMAD SYAHIRUL FADHLI BIN MOHAMAD SHAFIK<br><br>
+                                ✔ UMAR BIN HAFIZI<br><br>
+                                ✔ NATHRAH BINTI NORASID<br><br>
+                                ✔ NUR AMEERA BINTI HAZMAN<br><br>
+                                ✔ NURDINI ILYASYA BINTI MOHD SUHAILI<br><br>
+                                ✔ NURNAJIHA BINTI MUHAMAD NAZI<br><br>
+                                ✔ SAYYIDAH NAFISAH BINTI SUHAIMI<br><br>
+                                ✔ DURRATUSSYIFA BINTI ROZUKI<br><br>
+                                ✔ NUR KAISAH BALQIS BINTI MOHAMAD NAJIB<br><br>
+                                ✔ MOHAMAD DANISH ADLAN BIN MOHAMAD ROSLAN<br> <br>
+                                ✔ MUHAMMAD HAZIM BIN NOOR AZAM<br> <br>
+                                ✔ MUHAMMAD AIMAN FAIZ BIN AHMAD RIDZWAN<br> <br>
+                                ✔ IZZNURDINI BINTI MOHD FAUZI<br> <br>
+                                ✔ NUR AQMAR BINTI MOHD YUSRI<br> <br>
+                                ✔ SARAH NABILA BINTI MUHAMMAD NIZAR<br><br>
+                            </div>
+
+                            <div class="column auto">
+                                ✔ ALI HAFIZ BIN SAHAR<br><br>
+                                ✔ EMIR HAZIQ BIN ANAS NAZSARMAZ<br><br>
+                                ✔ MUHAMMAD AJMAL ASYRAF BIN MOHD FARIF<br><br>
+                                ✔ MUHAMMAD FAIZNUR HIJAZI BIN MOHD NOR<br><br>
+                                ✔ MUHAMMAD KHAIRUL IMAN BIN BAZRI<br><br>
+                                ✔ MUHAMMAD ZAHID HAKIMI BIN MOHD BAIRAM<br><br>
+                                ✔ MIMI NADZIRAH AFIQAH BINTI MD SUHAIMI<br><br>
+                                ✔ NUR ALIA KAUTHAR BINTI MUHD ASTAHAIRI<br><br>
+                                ✔ NUR AZNIZA BINTI MUHAMMAD<br><br>
+                                ✔ NURMIZA SYAHIRAH BINTI NOOR AZWAN<br><br>
+                                ✔ NURUL AMIRA SYAKIRAH BINTI MD AYOB<br><br>
+                                ✔ SHAKIRAH HUSNA BINTI KIRAHMAN<br><br>
+                                ✔ SITI NUR AERINA BINTI MAINONG<br><br>
+                                ✔ DANI MIZAN BIN NORIZAM<br><br>
+                                ✔ MUHAMMAD ADAM BIN RAZALI<br><br>
+                                ✔ MUHAMAD HAZIQ BIN MUHAMAD FADZILAH<br><br>
+                                ✔ AINUL IMAN BINTI ZAFIR KHAN<br><br>
+                                ✔ IMAN NAFISAH BINTI JEMAHADI<br><br>
+                                ✔ NUR DANISSA IRZATI BINTI ANIS IRWAN<br><br>
+                            </div>
+                        </div>
+                        </p>
+
+
+                    </div>
+
+
+                    <div class="content">
+
+
+                    </div>
+
+                </div>
+            </div>
+
+
+        </div>
+
+        <div class="clearfix"></div>
+
+        <footer class="footer">
+            <div class="content has-text-centered">
+                <p>
+                    <strong>Website BKP MRSM Gemencheh</strong> by <a href="https://github.com/MagusWyvern">Adi Ahmad
+                        Danish</a>.
+                    The source code is licensed
+                    <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+                    is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+                </p>
+            </div>
+        </footer>
+
+</body>
+
+</html>
+
 GURU PENASIHAT
-ENCIK MOHD FAIZI BIN MAMAT
-PUAN HANIS BINTI MD SUDI
+
 AHLI
-✔AHMAD FIKRY ZAKWAN BIN MOHD SHAMSULIZAM	  	✔ALI HAFIZ BIN SAHAR
-✔AZMIL ARIF BIN ZAINUDDIN 		 	✔EMIR HAZIQ BIN ANAS NAZSARMAZ
-✔FIRMAN FIRDAUS BIN AHMAD ZAIDI 		  	✔MUHAMMAD AJMAL ASYRAF BIN MOHD FARIF
-✔MUHAMMAD DANIAL BIN MOHD EIZARUDDIN 	  	✔MUHAMMAD FAIZNUR HIJAZI BIN MOHD NOR
-✔MUHAMMAD IMAN BIN IZHAM 		  		✔MUHAMMAD KHAIRUL IMAN BIN BAZRI
-✔MUHAMMAD SYAHIRUL FADHLI BIN MOHAMAD SHAFIK 	✔MUHAMMAD ZAHID HAKIMI BIN MOHD BAIRAM
-✔UMAR BIN HAFIZI     				✔MIMI NADZIRAH AFIQAH BINTI MD SUHAIMI
-✔NATHRAH BINTI NORASID 	  			✔NUR ALIA KAUTHAR BINTI MUHD ASTAHAIRI
-✔NUR AMEERA BINTI HAZMAN 		  		✔NUR AZNIZA BINTI MUHAMMAD
-✔NURDINI ILYASYA BINTI MOHD SUHAILI 		✔NURMIZA SYAHIRAH BINTI NOOR AZWAN
-✔NURNAJIHA BINTI MUHAMAD NAZI 	  	  	✔NURUL AMIRA SYAKIRAH BINTI MD AYOB
-✔SAYYIDAH NAFISAH BINTI SUHAIMI 		  	✔SHAKIRAH HUSNA BINTI KIRAHMAN
-✔DURRATUSSYIFA BINTI ROZUKI 		  	✔SITI NUR AERINA BINTI MAINONG
-✔NUR KAISAH BALQIS BINTI MOHAMAD NAJIB 	  	✔DANI MIZAN BIN NORIZAM
-✔MOHAMAD DANISH ADLAN BIN MOHAMAD ROSLAN 		✔MUHAMMAD ADAM BIN RAZALI
-✔MUHAMMAD HAZIM BIN NOOR AZAM	  		✔MUHAMAD HAZIQ BIN MUHAMAD FADZILAH
-✔MUHAMMAD AIMAN FAIZ BIN AHMAD RIDZWAN 		✔AINUL IMAN BINTI ZAFIR KHAN
-✔IZZNURDINI BINTI MOHD FAUZI 	  		✔IMAN NAFISAH BINTI JEMAHADI
-✔NUR AQMAR BINTI MOHD YUSRI 		  	✔NUR DANISSA IRZATI BINTI ANIS IRWAN
-✔SARAH NABILA BINTI MUHAMMAD NIZAR 		
