--- a/ldp.html
+++ b/ldp.html
@@ -45,7 +45,7 @@
             <li><a href="badar.html">Badan Dakwah dan Rohani</a></li>
             <li><a class="is-active">Lembaga Disiplin Pelajar</a>
               <ul>
-                <li><a href="">LDP 20/21</a></li>
+                <li><a href="./ldp/ldp2021.html">LDP 20/21</a></li>
               </ul>
             </li>
 
