:stars: Added LDP 21/22 Organizational Chart

--- a/ldp/cartaorganisasi2122.html
+++ b/ldp/cartaorganisasi2122.html
@@ -61,8 +61,8 @@
 
                         <li><a href="../ldp.html">Lembaga Disiplin Pelajar</a>
                             <ul>
-                                <li><a class="is-active">LDP 20/21</a></li>
-                                <li><a href="./ldp2122.html">LDP 21/22</a></li>
+                                <li><a href="./ldp2021.html">LDP 20/21</a></li>
+                                <li><a class="is-active">LDP 21/22</a></li>
                             </ul>
                         </li>
 
@@ -76,7 +76,7 @@
 
                     <section class="hero is-info is-small">
                         <div class="hero-body">
-                            <h1>Carta Organisasi LDP 20/21<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
+                            <h1>Carta Organisasi LDP 21/22<a target="_blank" href="https://www.instagram.com/bwpgmcua/"
                                     class="fa fa-instagram"></a></h1>
 
                             <i>"Dipimpin untuk memimpin"</i>
@@ -115,58 +115,40 @@
 
                     <div class="box">
 
-                        <p>
-                        <div class="columns">
 
-                            <div class="column auto">
+                        <center>
+
+                            <img src="./21-22/organization-chart-banner.jpg" alt=""><br>
+                            <figure class="image is-128x128">
+                                <img class="is-rounded" src="./21-22/sylvanite-logo.jpg" alt=""><br>
+
+                            </figure>
+                            <div class="columns">
+                                <div class="column">
+
+                                    <figure class="image is-5by4">
+
+                                        <img src="./21-22/president.jpg" alt="">
+                                    </figure>
+                                </div>
+
+                                <div class="column">
 
 
+                                    <figure class="image is-5by4">
 
-                                ✔ AHMAD FIKRY ZAKWAN BIN MOHD SHAMSULIZAM<br><br>
-                                ✔ AZMIL ARIF BIN ZAINUDDIN<br><br>
-                                ✔ FIRMAN FIRDAUS BIN AHMAD ZAIDI<br><br>
-                                ✔ MUHAMMAD DANIAL BIN MOHD EIZARUDDIN<br><br>
-                                ✔ MUHAMMAD IMAN BIN IZHAM<br><br>
-                                ✔ MUHAMMAD SYAHIRUL FADHLI BIN MOHAMAD SHAFIK<br><br>
-                                ✔ UMAR BIN HAFIZI<br><br>
-                                ✔ NATHRAH BINTI NORASID<br><br>
-                                ✔ NUR AMEERA BINTI HAZMAN<br><br>
-                                ✔ NURDINI ILYASYA BINTI MOHD SUHAILI<br><br>
-                                ✔ NURNAJIHA BINTI MUHAMAD NAZI<br><br>
-                                ✔ SAYYIDAH NAFISAH BINTI SUHAIMI<br><br>
-                                ✔ DURRATUSSYIFA BINTI ROZUKI<br><br>
-                                ✔ NUR KAISAH BALQIS BINTI MOHAMAD NAJIB<br><br>
-                                ✔ MOHAMAD DANISH ADLAN BIN MOHAMAD ROSLAN<br> <br>
-                                ✔ MUHAMMAD HAZIM BIN NOOR AZAM<br> <br>
-                                ✔ MUHAMMAD AIMAN FAIZ BIN AHMAD RIDZWAN<br> <br>
-                                ✔ IZZNURDINI BINTI MOHD FAUZI<br> <br>
-                                ✔ NUR AQMAR BINTI MOHD YUSRI<br> <br>
-                                ✔ SARAH NABILA BINTI MUHAMMAD NIZAR<br><br>
+                                        <img src="./21-22/vice-president.jpg" alt="">
+                                    </figure>
+                                </div>
                             </div>
 
-                            <div class="column auto">
-                                ✔ ALI HAFIZ BIN SAHAR<br><br>
-                                ✔ EMIR HAZIQ BIN ANAS NAZSARMAZ<br><br>
-                                ✔ MUHAMMAD AJMAL ASYRAF BIN MOHD FARIF<br><br>
-                                ✔ MUHAMMAD FAIZNUR HIJAZI BIN MOHD NOR<br><br>
-                                ✔ MUHAMMAD KHAIRUL IMAN BIN BAZRI<br><br>
-                                ✔ MUHAMMAD ZAHID HAKIMI BIN MOHD BAIRAM<br><br>
-                                ✔ MIMI NADZIRAH AFIQAH BINTI MD SUHAIMI<br><br>
-                                ✔ NUR ALIA KAUTHAR BINTI MUHD ASTAHAIRI<br><br>
-                                ✔ NUR AZNIZA BINTI MUHAMMAD<br><br>
-                                ✔ NURMIZA SYAHIRAH BINTI NOOR AZWAN<br><br>
-                                ✔ NURUL AMIRA SYAKIRAH BINTI MD AYOB<br><br>
-                                ✔ SHAKIRAH HUSNA BINTI KIRAHMAN<br><br>
-                                ✔ SITI NUR AERINA BINTI MAINONG<br><br>
-                                ✔ DANI MIZAN BIN NORIZAM<br><br>
-                                ✔ MUHAMMAD ADAM BIN RAZALI<br><br>
-                                ✔ MUHAMAD HAZIQ BIN MUHAMAD FADZILAH<br><br>
-                                ✔ AINUL IMAN BINTI ZAFIR KHAN<br><br>
-                                ✔ IMAN NAFISAH BINTI JEMAHADI<br><br>
-                                ✔ NUR DANISSA IRZATI BINTI ANIS IRWAN<br><br>
-                            </div>
-                        </div>
-                        </p>
+                        </center>
+
+
+
+
+
+
 
 
                     </div>
