--- a/ldp.html
+++ b/ldp.html
@@ -46,6 +46,7 @@
             <li><a class="is-active">Lembaga Disiplin Pelajar</a>
               <ul>
                 <li><a href="./ldp/ldp2021.html">LDP 20/21</a></li>
+                <li><a href="./ldp/ldp2122.html">LDP 21/22</a></li>
               </ul>
             </li>
 
